2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-recipients.c:
    * libseahorse/seahorse-recipients.glade:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-signer.glade: Remove SeahorseDefaultKeyControl
    object and add seahorse_combo_keys_* functions which work better 
    with glade interface files.
    
2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gconf.c:
    * libseahorse/seahorse-gconf.h: Make seahorse_gconf_notify_lazy support
    any object as the lifetime parameter.
    
2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c: Fix crasher and memory leaks
    in proxy support. Bug #324312
    
2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-passphrase.c: Don't crash when prompting
    for passphrases without prompt string. Fixes Bug #334275
    
2006-03-10  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-hkp-source.c: Respect GNOME
    proxy settings.(Bug #324312)

2006-03-08  Adam Schreiber  <sadam@clemson.edu>

    * agent/seahorse-agent-status.c:
    * plugins/applet/seahorse-applet.c: Make windows 
    that appear have the proper image in the window selector.
    * plugins/applet/seahorse-applet.c: Make proper icon display 
    in About dialog. 

2006-03-06  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in: Update version number to 0.9.1

2006-03-05  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README:
    * INSTALL: Version 0.9.0
    
2005-03-05  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/Makefile.am:
    * libcryptui/Makefile.am:
    * pixmaps/Makefile.am: make distcheck fixes
    
2006-02-26  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-add-keyserver.glade: