@@ -1,5 +1,11 @@
 2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-widget.c:
+    * libseahorse/seahorse-widget.h: SeahorseWidget derives from GtkObject
+    so we can track lifetime easily.
+     
+2006-03-17  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-default-key-control.c:
     * libseahorse/seahorse-default-key-control.h:
     * libseahorse/seahorse-prefs.c:
